Fix the button alignment in the module wizard

--- a/core-bundle/contao/themes/flexible/main.css
+++ b/core-bundle/contao/themes/flexible/main.css
@@ -1959,6 +1959,7 @@ ul.sgallery li {
 	padding: 0;
 	border: 0;
 	background: none;
+	vertical-align: middle;
 }
 
 /* Module wizard */
